# frontend

./: Dockerfile  Makefile  cap.py  pyproject.toml  readme.md  setup.cfg
.github/workflows/: docker-publish.yml
cap/: __main__.py  app.py  config.py  forms.py
cap/api/: __init__.py  balloons.py  client.py  projects.py  schemas.py
cap/model/: schemas.py
cap/page/: attributes.py  home.py  index.py  projects.py  stock.py
cap/static/: stock.js
cap/static/images/favicon/: site.webmanifest
cap/templates/: balloons.html  base.html  delete_project.html  delete_stock.html  home.html  index.html  more_projects.html  projects.html  projects_edit.html  stock.html  stock_edit.html
cap/view/: balloons.py
